BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_ProviderGroupTokens__c.object
<CustomObject>
    <description>This object holds all the attempts made by the CSR, of a particular Provider group, to move a customer out of FAP. It holds,info of the CSR who released the customer, the device SAN, the date on which the customer is moved out of FAP, the Location account details.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ProviderGroupTokens</relationshipLabel>
        <relationshipName>ProviderGroupTokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moved_out_date__c</fullName>
        <label>Moved out date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Group Name</label>
        <referenceTo>HSvc_ProviderGroup__c</referenceTo>
        <relationshipLabel>ProviderGroupTokens</relationshipLabel>
        <relationshipName>HSvc_ProviderGroupTokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Info__c</fullName>
        <label>User Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProviderGroupTokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProviderGroupToken</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Moved_out_date__c</columns>
        <columns>Provider_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProviderGroupTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>